--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,7 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  pool: 10
   timeout: 5000
   username: <%= ENV['RDS_USER'] %>
   password: <%= ENV['RDS_PASSWORD'] %>
